--- a/client/assets/scss/splash.scss
+++ b/client/assets/scss/splash.scss
@@ -320,6 +320,11 @@
             padding: 0 25vw;
         }
 
+        a {
+            .clicker {
+                margin: 2vw auto 0;
+            }
+        }
     }
 
     .clicker {
